[project]
name = "doro-bot"
version = "0.1.0"
description = "doro-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_petpet", "nonebot_plugin_status", "nonebot_plugin_starrail_calendar", "nonebot_plugin_gspanel"]
plugin_dirs = []
builtin_plugins = ["echo"]
